--- a/.gitignore
+++ b/.gitignore
@@ -701,3 +701,11 @@ ASALocalRun/
 # Local History for Visual Studio
 .localhistory/
 
+### CodeBlocks ###
+# specific to CodeBlocks IDE
+*.layout
+*.depend
+*.cbp
+# generated directories
+bin/
+obj/
